Minor changes with the accounts page and visual fixes to the pages

--- a/ShirtAppMVC/Views/Home/Index.cshtml
+++ b/ShirtAppMVC/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Shirt Site</h1>
+    <p>A website that allows a user to view and purchase avaliable shirts, the webiste also includes access for admins to manage the availibe shirts and transactions </p>
 </div>
