--- a/ShirtAppMVC/Views/Transactions/Details.cshtml
+++ b/ShirtAppMVC/Views/Transactions/Details.cshtml
@@ -29,6 +29,12 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Shirt.ShirtName)
         </dd>
+        <dt class="col-sm-2">
+            Shirt Price
+        </dt>
+        <dd class="col-sm-10">
+            $@Html.DisplayFor(model => model.Shirt.Price)
+        </dd>
     </dl>
 </div>
 <div>
